# diffshipper

./: .agignore  .gitignore  .gitmodules  Makefile.am  NOTICE  README.md  autogen.sh  bin2c.lua  configure.ac
doc/: diffshipper.1  diffshipper.1.md  generate_man.sh
src/: api.c  api.h  buf.c  buf.h  conf.c  conf.h  diff.c  diff.h  dmp_lua.c  dmp_lua.h  file.c  file.h  fs_event_handlers.c  fs_event_handlers.h  ignore.c  ignore.h  init_room.c  init_room.h  log.c  log.h  main.c  mmap.c  mmap.h  net.c  net.h  options.c  options.h  proto_handlers.c  proto_handlers.h  scandir.c  scandir.h  util.c  util.h
src/lua/: diff_match_patch.lua  diff_match_patch_test.lua  init.lua
